fixed the top text and got rid of overflow:auto in .about-content

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ margin-top: 10%;
 
 .about-content{
 max-width: 100%;
-overflow: auto;
+
 
 }
 p{
